--- a/hotel1.html
+++ b/hotel1.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header id="headerIndex">
-        <ul class="listaHeader" id="menuHeader">Alojamientos
-            <ul> Municipios 
+    <header>
+        <ul class="listaHeader">=
+            <ul> Municipios
                 <li><a href="hotel1.html">hotel1</a></li>
                 <li><a href="hotel2.html">hotel2</a></li>
                 <li><a href="hotel3.html">hotel3</a></li>
@@ -16,14 +16,10 @@
                 <li><a href="hotel5.html">hotel5</a></li>
             </ul>
         </ul>
-        <h1>BALEARES</h1>
-        <div class="infoBox">
-            <img class="infoHeaderSection" src="pics/info.png" alt="">
-            <img class="infoHeaderSection" src="pics/usuario.png" alt="">
-        </div>
+        <span><a href="index.html">BALEARES</a></span>
     </header>
-    <main>
-        <p class="eslogan"><h2>ALOJAMIENTO TURISTICO</h2><h2>EN</h2><h2>BALEARES</h2></p>
-    </main>
+    <nav>
+
+    </nav>
 </body>
 </html>
