--- a/index.html
+++ b/index.html
@@ -7,8 +7,22 @@
 </head>
 <body>
     <header id="headerIndex">
-        <ul class="listaHeader" id="menuHeader">Alojamientos
+        <ul class="listaHeader" id="menuHeader"> Alojamientos
             <ul> Municipios 
+                <li><a href="hotel1.html">hotel1</a></li>
+                <li><a href="hotel2.html">hotel2</a></li>
+                <li><a href="hotel3.html">hotel3</a></li>
+                <li><a href="hotel4.html">hotel4</a></li>
+                <li><a href="hotel5.html">hotel5</a></li>
+            </ul>
+            <ul> Categorias
+                <li><a href="hotel1.html">hotel1</a></li>
+                <li><a href="hotel2.html">hotel2</a></li>
+                <li><a href="hotel3.html">hotel3</a></li>
+                <li><a href="hotel4.html">hotel4</a></li>
+                <li><a href="hotel5.html">hotel5</a></li>
+            </ul>
+            <ul> Tipos
                 <li><a href="hotel1.html">hotel1</a></li>
                 <li><a href="hotel2.html">hotel2</a></li>
                 <li><a href="hotel3.html">hotel3</a></li>
@@ -23,7 +37,7 @@
         </div>
     </header>
     <main>
-        <p class="eslogan"><h2>ALOJAMIENTO TURISTICO</h2><h2>EN</h2><h2>BALEARES</h2></p>
+        <p class="eslogan">ALOJAMIENTO TURISTICO EN BALEARES </p>
     </main>
 </body>
 </html>
