--- a/index.html
+++ b/index.html
@@ -7,7 +7,49 @@
 </head>
 <body>
     <header id="headerIndex">
-        <ul class="listaHeader" id="menuHeader"> Alojamientos
+        <h1>BALEARES</h1>
+        <h2>ALOJAMIENTO TURISTICO EN BALEARES</h2>
+        <div class="infoBox">
+            <img class="infoHeaderSection" src="pics/info.png" alt="">
+            <img class="infoHeaderSection" src="pics/usuario.png" alt="">
+        </div>
+    </header>
+    <main>
+        <p class="eslogan">ALOJAMIENTO TURISTICO EN BALEARES </p>
+        <span>Categorias</span>
+        <span>Municipios</span>
+        <div>
+            <hr>
+            <div class="opcion">
+                <a href="hotel1.html">Hotel1</a>
+                <span>Precio</span>
+            </div>
+            <hr>
+            <div class="opcion">
+                <a href="hotel2.html">Hotel2</a>
+                <span>Precio</span>
+            </div>
+            <hr>
+            <div class="opcion">
+                <a href="hotel3.html">Hotel3</a>
+                <span>Precio</span>
+            </div>
+            <hr>
+            <div class="opcion">
+                <a href="hotel4.html">Hotel4</a>
+                <span>Precio</span>
+            </div>
+            <hr>
+            <div class="opcion">
+                <a href="hotel5.html">Hotel5</a>
+                <span>Precio</span>
+            </div>
+        </div>
+    </main>
+</body>
+</html>
+
+<!-- <ul class="listaHeader" id="menuHeader"> Alojamientos
             <ul> Municipios 
                 <li><a href="hotel1.html">hotel1</a></li>
                 <li><a href="hotel2.html">hotel2</a></li>
@@ -29,15 +71,4 @@
                 <li><a href="hotel4.html">hotel4</a></li>
                 <li><a href="hotel5.html">hotel5</a></li>
             </ul>
-        </ul>
-        <h1>BALEARES</h1>
-        <div class="infoBox">
-            <img class="infoHeaderSection" src="pics/info.png" alt="">
-            <img class="infoHeaderSection" src="pics/usuario.png" alt="">
-        </div>
-    </header>
-    <main>
-        <p class="eslogan">ALOJAMIENTO TURISTICO EN BALEARES </p>
-    </main>
-</body>
-</html>
+        </ul> -->
