--- a/hotel1.html
+++ b/hotel1.html
@@ -4,22 +4,32 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styleHoteles.css">
 </head>
 <body>
-    <header>
-        <ul class="listaHeader">=
-            <ul> Municipios
-                <li><a href="hotel1.html">hotel1</a></li>
-                <li><a href="hotel2.html">hotel2</a></li>
-                <li><a href="hotel3.html">hotel3</a></li>
-                <li><a href="hotel4.html">hotel4</a></li>
-                <li><a href="hotel5.html">hotel5</a></li>
-            </ul>
-        </ul>
-        <span><a href="index.html">BALEARES</a></span>
+    <header class="headers">
+        <a href="index.html"><h1>BALEARES</h1></a>
+        <h2>ALOJAMIENTO TURISTICO EN BALEARES</h2>
+        <div class="infoBox">
+            <a href="https://www.caib.es/govern/index.do?lang=es"><img class="infoHeaderSection" src="pics/info.png" alt=""></a>
+            <a href="login.html"><img class="infoHeaderSection" src="pics/usuario.png" alt=""></a>
+        </div>
     </header>
-    <nav>
-
-    </nav>
+    <main>
+        <nav>
+            <ul>
+                <li>Hotel</li>
+                <li>Hotel</li>
+                <li>Hotel</li>
+                <li>Hotel</li>
+                <li>Hotel</li>
+            </ul>
+        </nav>
+        <section>
+            <img src="" alt="HHH">
+            <h1>Hotel</h1>
+            <h3>Precio</h3>
+        </section>
+    </main>
 </body>
 </html>
