--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header id="headerIndex">
+    <header class="headers">
         <h1>BALEARES</h1>
         <h2>ALOJAMIENTO TURISTICO EN BALEARES</h2>
         <div class="infoBox">
-            <img class="infoHeaderSection" src="pics/info.png" alt="">
-            <img class="infoHeaderSection" src="pics/usuario.png" alt="">
+            <a href="https://www.caib.es/govern/index.do?lang=es"><img class="infoHeaderSection" src="pics/info.png" alt=""></a>
+            <a href="login.html"><img class="infoHeaderSection" src="pics/usuario.png" alt=""></a>
         </div>
     </header>
     <main>
@@ -22,27 +22,27 @@
             <hr>
             <div class="opcion">
                 <a href="hotel1.html">Hotel1</a>
-                <span>Precio</span>
+                <span>---,-- €</span>
             </div>
             <hr>
             <div class="opcion">
                 <a href="hotel2.html">Hotel2</a>
-                <span>Precio</span>
+                <span>---,-- €</span>
             </div>
             <hr>
             <div class="opcion">
                 <a href="hotel3.html">Hotel3</a>
-                <span>Precio</span>
+                <span>---,-- €</span>
             </div>
             <hr>
             <div class="opcion">
                 <a href="hotel4.html">Hotel4</a>
-                <span>Precio</span>
+                <span>---,-- €</span>
             </div>
             <hr>
             <div class="opcion">
                 <a href="hotel5.html">Hotel5</a>
-                <span>Precio</span>
+                <span>---,-- €</span>
             </div>
         </div>
     </main>
